--- a/templateBoostrap/principal/_css/css.css
+++ b/templateBoostrap/principal/_css/css.css
@@ -2,7 +2,7 @@ body{
     margin-top: 15px;
     width: 100%;
     height: 100%;
-    font-family: 'Quicksand', sans-serif;
+    font-family: 'Playfair Display', serif;
 }
 div.carousel-inner{
     max-height: 450px;
@@ -15,18 +15,24 @@ div.carousel-inner{
     }
 }
 div.container{
-    padding-top: 50px;
+    padding-top: 15px;
 }
 nav{
+    padding: 5px;
     z-index: 5;
 }
 .row{
-    margin-bottom: 30px;
-    padding: 10px;
+    width: 100%;
+    margin-bottom: 20px;
+    padding: 20px;
     border: 1px;
     border-style:solid;
     border-radius: 10px;
     border-color: lightgray;
+    box-shadow: 5px 5px 5px rgba(0,0,0,0.2);
+}
+#localizacao{
+    height: 500px;
 }
 #imgfooter{
     width: 100%;
